--- a/OpenGLTutorial/app/src/main/cpp/CMakeLists.txt
+++ b/OpenGLTutorial/app/src/main/cpp/CMakeLists.txt
@@ -47,4 +47,6 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
         # List libraries link to the target library
         android
         log
+        GLESv3
+        EGL
         )
