--- a/OpenGLTutorial/app/src/main/cpp/CMakeLists.txt
+++ b/OpenGLTutorial/app/src/main/cpp/CMakeLists.txt
@@ -34,6 +34,7 @@ file(GLOB src-files
         ${CMAKE_SOURCE_DIR}/*.cpp
         ${CMAKE_SOURCE_DIR}/util/*.cpp
         ${CMAKE_SOURCE_DIR}/sample/*.cpp
+        ${CMAKE_SOURCE_DIR}/sample/basic/*.cpp
         )
 
 add_library(${CMAKE_PROJECT_NAME} SHARED
