[update] update openxr header

--- a/OpenXRTutorials/HelloXR/app/src/main/cpp/CMakeLists.txt
+++ b/OpenXRTutorials/HelloXR/app/src/main/cpp/CMakeLists.txt
@@ -6,11 +6,24 @@ project("${PROJECT_NAME}")
 message("CMake Project Name: ${PROJECT_NAME}")
 message("CMake Binary: ${CMAKE_CURRENT_BINARY_DIR}")
 
-file(GLOB LOCAL_HEADERS "common/*.h")
-file(GLOB LOCAL_SOURCE "common/*.cpp")
+if(ANDROID)
+    add_definitions(-DXR_USE_PLATFORM_ANDROID)
+
+    set(HELLOXR_DEFAULT_GRAPHICS_PLUGIN "OpenGLES" CACHE STRING "Which graphics plugin should be used by default for Hello XR artifacts?")
+    # These are the recognized options: provide them as a helper in the CMake GUI
+    set_property(CACHE HELLOXR_DEFAULT_GRAPHICS_PLUGIN PROPERTY STRINGS "OpenGLES" "Vulkan")
+
+    if(HELLOXR_DEFAULT_GRAPHICS_PLUGIN STREQUAL "OpenGLES")
+        message(STATUS "hello_xr will default to OpenGL ES graphics plugin")
+        target_compile_definitions(${PROJECT_NAME} PRIVATE DEFAULT_GRAPHICS_PLUGIN_OPENGLES)
+    elseif(HELLOXR_DEFAULT_GRAPHICS_PLUGIN STREQUAL "Vulkan")
+        message(STATUS "hello_xr will default to Vulkan graphics plugin")
+        target_compile_definitions(${PROJECT_NAME} PRIVATE DEFAULT_GRAPHICS_PLUGIN_VULKAN)
+    endif()
+endif()
 
 include(FetchContent)
-# openxr_loader - From github.com/KhronosGroup
+## openxr_loader - From github.com/KhronosGroup
 set(BUILD_TESTS
         OFF
         CACHE INTERNAL "Build Tests")
@@ -28,7 +41,10 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(OpenXR)
-# end openxr_loader
+## end openxr_loader
+
+file(GLOB LOCAL_HEADERS "common/*.h")
+file(GLOB LOCAL_SOURCE "common/*.cpp")
 
 set(SOURCES
         main.cpp
@@ -44,9 +60,8 @@ add_library(${PROJECT_NAME} SHARED
 include(AndroidNdkModules)
 android_ndk_import_module_native_app_glue()
 
-target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBRARY} ${ANDROID_LOG_LIBRARY})
-
 target_link_libraries(${PROJECT_NAME} OpenXR::openxr_loader)
+target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBRARY} ${ANDROID_LOG_LIBRARY})
 
 target_link_libraries(${PROJECT_NAME}
         native_app_glue
@@ -56,8 +71,7 @@ target_link_libraries(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME}
         PRIVATE
-        ${openxr_SOURCE_DIR}/src
-        ${openxr_SOURCE_DIR}/src/common
-        ${openxr_SOURCE_DIR}/src/tests/hello_xr/vulkan_shaders
+        "openxr/src"
+        "${openxr_SOURCE_DIR}/src/common"
+        "${openxr_SOURCE_DIR}/external/include"
 )
-
