[update] update android main method

--- a/OpenXRTutorials/HelloXR/app/src/main/cpp/CMakeLists.txt
+++ b/OpenXRTutorials/HelloXR/app/src/main/cpp/CMakeLists.txt
@@ -13,13 +13,13 @@ if(ANDROID)
     # These are the recognized options: provide them as a helper in the CMake GUI
     set_property(CACHE HELLOXR_DEFAULT_GRAPHICS_PLUGIN PROPERTY STRINGS "OpenGLES" "Vulkan")
 
-    if(HELLOXR_DEFAULT_GRAPHICS_PLUGIN STREQUAL "OpenGLES")
-        message(STATUS "hello_xr will default to OpenGL ES graphics plugin")
-        target_compile_definitions(${PROJECT_NAME} PRIVATE DEFAULT_GRAPHICS_PLUGIN_OPENGLES)
-    elseif(HELLOXR_DEFAULT_GRAPHICS_PLUGIN STREQUAL "Vulkan")
-        message(STATUS "hello_xr will default to Vulkan graphics plugin")
-        target_compile_definitions(${PROJECT_NAME} PRIVATE DEFAULT_GRAPHICS_PLUGIN_VULKAN)
-    endif()
+#    if(HELLOXR_DEFAULT_GRAPHICS_PLUGIN STREQUAL "OpenGLES")
+#        message(STATUS "hello_xr will default to OpenGL ES graphics plugin")
+#        target_compile_definitions(${PROJECT_NAME} PRIVATE DEFAULT_GRAPHICS_PLUGIN_OPENGLES)
+#    elseif(HELLOXR_DEFAULT_GRAPHICS_PLUGIN STREQUAL "Vulkan")
+#        message(STATUS "hello_xr will default to Vulkan graphics plugin")
+#        target_compile_definitions(${PROJECT_NAME} PRIVATE DEFAULT_GRAPHICS_PLUGIN_VULKAN)
+#    endif()
 endif()
 
 include(FetchContent)
