--- a/OpenXRTutorials/HelloXR/app/src/main/AndroidManifest.xml
+++ b/OpenXRTutorials/HelloXR/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:excludeFromRecents="false"
             android:exported="true"
             android:launchMode="singleTask"
+            android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
 
             <meta-data
