[update] update extern android_main method

--- a/OpenXRTutorials/HelloXR/app/src/main/cpp/CMakeLists.txt
+++ b/OpenXRTutorials/HelloXR/app/src/main/cpp/CMakeLists.txt
@@ -35,9 +35,9 @@ FetchContent_MakeAvailable(OpenXR)
 file(GLOB LOCAL_HEADERS "common/*.h")
 file(GLOB LOCAL_SOURCE "common/*.cpp")
 
-
+#main.cpp
 set(SOURCES
-        main.cpp
+        intro.cpp
         ${LOCAL_SOURCE}
 )
 
